# uncertainty

./: README.md  dual.py  main.py  pyproject.toml  test.py  test_dual.py
src/: dual.py  uncertainty.py
tests/: test_dual.py  test_uncertain.py
